--- a/src/styles/slider.css
+++ b/src/styles/slider.css
@@ -7,7 +7,7 @@
     display: inline-block;
     width: 7px;
     height: 7px;
-
+    transition: .2s ease-in-out;
     background-color: rgba(255, 255, 255, 0.5);
     border-radius: 20px;
 }
@@ -21,6 +21,7 @@
 }
 
 .alice-carousel__dots-item:not(.__custom).__active {
+    background-color: #7572D5;
     width: 20px;
 }
 
